[gd_scene load_steps=4 format=2]

[ext_resource path="res://FrameText.gd" type="Script" id=1]
[ext_resource path="res://Assets/arrow-37-24.png" type="Texture" id=2]
[ext_resource path="res://Assets/star-2-24.png" type="Texture" id=3]

[node name="FrameText" type="Node2D"]
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 450.0
margin_bottom = 156.0

[node name="Name" type="Label" parent="."]
margin_left = 9.0
margin_top = 8.0
margin_right = 232.0
margin_bottom = 31.0

[node name="textDisplay" type="Label" parent="."]
margin_left = 18.0
margin_top = 38.0
margin_right = 425.0
margin_bottom = 134.0

[node name="nextReady" type="Sprite" parent="."]
visible = false
position = Vector2( 430.947, 139.766 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="completeReady" type="Sprite" parent="."]
visible = false
position = Vector2( 430.947, 139.766 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

